--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-fastify": "^9.2.1",
+    "@nestjs/schedule": "^2.1.0",
+    "@nestjs/typeorm": "^9.0.1",
+    "bn.js": "^5.2.1",
+    "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
-    "tslib": "^2.3.0"
+    "ton": "^12.1.5",
+    "tslib": "^2.3.0",
+    "typeorm": "^0.3.11"
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.0.0",
@@ -25,6 +32,8 @@
     "@nrwl/nest": "15.3.2",
     "@nrwl/node": "15.3.2",
     "@nrwl/workspace": "15.3.2",
+    "@types/bn.js": "^5.1.1",
+    "@types/cron": "^2.0.0",
     "@types/jest": "28.1.1",
     "@types/node": "18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
